# stegpal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  wordDefine.h
BMP/: Bitmap.c  Bitmap.h  CIEXYZ.h  Compression.c  Compression.h  DIBHeader.c  DIBHeader.h  FileHeader.c  FileHeader.h  Gap.c  Gap.h  Palette.c  Palette.h  Pixels.c  Pixels.h  gap.c
ICO/: DirEntries.c  DirEntries.h  IconImages.c  IconImages.h  Icons.c  Icons.h
StegPal/: Histogram.c  Histogram.h  stegpal.c  stegpal.h
